# sxh-soloCoder-1191

./: pyproject.toml  run.py
config/: default_rules.yaml
gerber_checker/: cli.py  config.py  diff.py  drc.py  metadata.py  models.py  parser.py  renderer.py  svg_export.py
sample_files/: board_outline.gbr  drc_test.gbr  drill.txt  drill_consecutive.txt  drill_excellon.txt  drill_inch.txt  drill_mixed_unit.txt  top_copper.gbr  top_copper_v2.gbr  top_silkscreen.gbr
sample_files/v1/: bottom.gbr
sample_files/v2/: drill_v2.txt
